# fdm_materials

./: .gitignore  .gitlab-ci.yml  .tmp.txt.swp  3dlab_petg_175.xml.fdm_material  CMakeLists.txt  CPackConfig.cmake  Eazao_Clay.xml.fdm_material  Eolas_Prints_ABS.xml.fdm_material.xml  Eolas_Prints_PETG.xml.fdm_material.xml  Eolas_Prints_PETG_Certified_UV_Resistant.xml.fdm_material.xml  Eolas_Prints_PLA.xml.fdm_material.xml  Eolas_Prints_PLA_INGEO_850.xml.fdm_material.xml  Eolas_Prints_PLA_INGEO_870.xml.fdm_material.xml  Eolas_Prints_PLA_Matte.xml.fdm_material.xml  Eolas_Prints_TPU_93A.xml.fdm_material.xml  Extrudr_GreenTECPro_Anthracite_175.xml.fdm_material  Extrudr_GreenTECPro_Anthrazit_175.xml.fdm_material  Extrudr_GreenTECPro_Black_175.xml.fdm_material  Extrudr_GreenTECPro_Blue_175.xml.fdm_material  Extrudr_GreenTECPro_Nature_175.xml.fdm_material  Extrudr_GreenTECPro_Red_175.xml.fdm_material  Extrudr_GreenTECPro_Silver_175.xml.fdm_material  Extrudr_GreenTECPro_White_175.xml.fdm_material  Fillamentum_NonOilen_Natural_175.xml.fdm_material  Geeetech_PLA_Black.xml.fdm_material  Geeetech_PLA_Blue.xml.fdm_material  Geeetech_PLA_Cyan.xml.fdm_material  Geeetech_PLA_Green.xml.fdm_material  Geeetech_PLA_Magenta.xml.fdm_material  Geeetech_PLA_Red.xml.fdm_material  Geeetech_PLA_Yellow.xml.fdm_material  GitVersion.yml  Jenkinsfile  KREI CORE.xml.fdm_material  KREI PLA REVOLUTION.xml.fdm_material  KREI_APEX.xml.fdm_material  LICENSE  Material4Print_PETG_Black_175.xml.fdm_material  Material4Print_PETG_Brightgreen_175.xml.fdm_material  Material4Print_PETG_Brightorange_175.xml.fdm_material  (+452 more)
.github/workflows/: build.yml  build_on_push_pr.yml  cicd.yml  conan-package.yml  notify_on_print_profile_change.yml  release.yml
ci/: complexity_analysis.sh  dead_code_analysis.sh  mypy.sh  style_analysis.sh
docker_env/: Dockerfile  buildenv_check.sh  make_docker.sh
scripts/: check_material_profiles.py  check_material_profiles_new_with_lxml.py  fdmmaterial.xsd  substitute.pl  substitute.txt  update_version_by_one.py
scripts/support/: README.md  deviceSupport.py  gitHubConnector.py  main.py  material.py  materialFileReader.py  materialsOutputFormatter.py  nozzleSupport.py  profile.py  requirements.txt  supportEnum.py
